# SunSkin

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: windows.yml
SDK/: AIBaseCommon.cpp  AIBaseCommon.hpp  AIMinionClient.cpp  AIMinionClient.hpp  AString.hpp  Champion.hpp  ChampionManager.hpp  CharacterDataStack.cpp  CharacterDataStack.hpp  CharacterStackData.hpp  Cryption.hpp  GameClient.hpp  GameObject.hpp  GameState.hpp  ManagerTemplate.hpp  Pad.hpp  Position.hpp  Renderer.cpp  Renderer.hpp  RiotArray.hpp  Skin.hpp  ViewProjMatrix.hpp
headers/: CheatManager.hpp  Config.hpp  D3DVTable.hpp  GUI.hpp  Holdon.hpp  Hooks.hpp  KeyBind.hpp  Logger.hpp  Memory.hpp  RandomGenerator.hpp  SkinDatabase.hpp  Translate.hpp  Utils.hpp  fnv_hash.hpp  offsets.hpp  resource.h  vmt_smart_hook.hpp
sources/: CheatManager.cpp  Config.cpp  GUI.cpp  Holdon.cpp  Hooks.cpp  KeyBind.cpp  Memory.cpp  SkinDatabase.cpp  SunSkin.cpp  SunSkin.rc  Utils.cpp
translate/: TENUS.hpp  TZHCN.hpp
